--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="container">
                     <div class="slider">
                         
-                        <img src="img/nickjr.jpg" alt="nickelodeon">
+                        <img class="slide-img" src="img/nickjr.jpg" alt="nickelodeon">
                         
                         <div class="arrow-navigation">
                             <img class="slide-left" src="img/icons/slider-prev.png" alt="previous">
