--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <nav>
                 <div class="container flex-sb">
                     <div class="logo">
-                        <h1><img src="img/icons/logo.png" alt="jetro"></h1>
+                        <a href="index.html"><h1><img src="img/icons/logo.png" alt="jetro"></h1></a>
                     </div>
                     <ul class="nav-items flex-sb">
                         <li class="nav-item active"><a href="">home</a></li>
-                        <li class="nav-item"><a href="">about us</a></li>
+                        <li class="nav-item"><a href="about-us.html">about us</a></li>
                         <li class="nav-item"><a href="">blog</a></li>
                         <li class="nav-item"><a href="">portfolio</a></li>
                         <li class="nav-item"><a href="">contact us</a></li>
