--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
             <section class="recent-work">
                 <div class="container">
-                    <div class="flex-sb">
+                    <div class="recent-work-title flex-sb">
                         <h2>recent works</h2>
                         <div class="doted-line">
                             <img src="img/icons/dotted-line.png" alt="Recent work">
