padding struggle fixed

--- a/index.html
+++ b/index.html
@@ -19,17 +19,19 @@
         <!-- Add your site or application content here -->
         <header>
             <nav>
-                <div class="container flex-sb">
-                    <div class="logo">
-                        <a href="index.html"><h1><img src="img/icons/logo.png" alt="jetro"></h1></a>
-                    </div>
-                    <ul class="nav-items flex-sb">
-                        <li class="nav-item active"><a href="">home</a></li>
-                        <li class="nav-item"><a href="about-us.html">about us</a></li>
-                        <li class="nav-item"><a href="">blog</a></li>
-                        <li class="nav-item"><a href="">portfolio</a></li>
-                        <li class="nav-item"><a href="">contact us</a></li>
-                    </ul>
+                <div class="container">
+                    <section class="header-top flex-sb">
+                        <div class="logo">
+                            <a href="index.html"><h1><img src="img/icons/logo.png" alt="jetro"></h1></a>
+                        </div>
+                        <ul class="nav-items flex-sb">
+                            <li class="nav-item active"><a href="index.html">home</a></li>
+                            <li class="nav-item "><a href="about-us.html">about us</a></li>
+                            <li class="nav-item"><a href="">blog</a></li>
+                            <li class="nav-item"><a href="">portfolio</a></li>
+                            <li class="nav-item"><a href="">contact us</a></li>
+                        </ul>
+                    </section>
                 </div>
             </nav>
         </header>
