blog complete, portfolio complete, portfolio-flexbox
create a portfolio flexbox

--- a/about-us.html
+++ b/about-us.html
@@ -27,7 +27,7 @@
                         <ul class="nav-items flex-sb">
                             <li class="nav-item"><a href="index.html">home</a></li>
                             <li class="nav-item active"><a href="about-us.html">about <span>us</span></a></li>
-                            <li class="nav-item"><a href="">blog</a></li>
+                            <li class="nav-item"><a href="blog.html">blog</a></li>
                             <li class="nav-item"><a href="">portfolio</a></li>
                             <li class="nav-item"><a href="">contact us</a></li>
                         </ul>
@@ -44,8 +44,8 @@
                 </div>
             </section>
             <div class="container">
-                <div class="about-pagewrapper flex-sb">
-                    <div class="about-main">
+                <div class="pagewrapper flex-sb">
+                    <div class="small-main">
                         <section class="intro">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Maecenas in magna mollis lectus lacinia mollis. </p>
                         </section>
