--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
                             <li class="nav-item"><a href="about-us.html">about us</a></li>
                             <li class="nav-item active"><a href="blog.html">blog</a></li>
                             <li class="nav-item"><a href="portfolio.html">portfolio</a></li>
-                            <li class="nav-item"><a href="">contact us</a></li>
+                            <li class="nav-item"><a href="contact-us.html">contact us</a></li>
                         </ul>
                     </section>
                 </div>
