--- a/sliderplugin.html
+++ b/sliderplugin.html
@@ -29,7 +29,7 @@
                             <li class="nav-item"><a href="about-us.html">about us</a></li>
                             <li class="nav-item"><a href="blog.html">blog</a></li>
                             <li class="nav-item active"><a href="portfolio.html">portfolio</a></li>
-                            <li class="nav-item"><a href="">contact us</a></li>
+                            <li class="nav-item"><a href="contact-us.html">contact us</a></li>
                         </ul>
                     </section>
                 </div>
@@ -43,9 +43,22 @@
                     </div>
                 </div>
             </section>
-            <section class="portfolio">
+            <section class="item-details">
                 <div class="container">
-                    
+                    <img src="img/slider-plugin.jpg" alt="slider plugin">
+                    <p>Praesent in dictum est. Fusce scelerisque nibh in sem rhoncus semper. Sed nisi risus, adipiscing eu mollis luctus, elementum at lacus. Suspendisse porta, eros eu fermentum molestie, purus erat hendrerit tellus, sodales rhoncus justo sapien in lacus. Morbi tincidunt lorem vitae turpis molestie lacinia. Vivamus nec nulla turpis. Ut placerat lacus aliquet ipsum lobortis vitae varius felis ullamcorper. Maecenas pharetra imperdiet dolor eu pulvinar.</p>
+                    <p>Nullam justo quam, tristique sit amet facilisis non, commodo vel nunc. In quam libero, pulvinar et scelerisque vitae, molestie euismod justo. Donec tortor magna, vehicula in facilisis sit amet, ultricies nec massa. Curabitur at tincidunt sem. Mauris nulla justo, ornare in condimentum non, eleifend at nibh. Nullam mattis faucibus odio, sit amet aliquam urna lobortis sit amet. Aliquam mauris elit, consectetur vestibulum tincidunt vitae, sodales vel libero. Phasellus malesuada, metus vitae lobortis sodales, diam lacus lacinia metus, id sodales ante urna in urna. Duis elementum luctus mi, et euismod leo aliquet at. Proin justo est, elementum in posuere ac, pharetra non ipsum. Phasellus sit amet nisi quis lacus hendrerit elementum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi bibendum enim ut sapien pellentesque lacinia. Aliquam fringilla sem eget sem pulvinar egestas. Duis congue lorem id mi scelerisque gravida. Ut in lacus libero. </p>
+                </div>
+                
+            </section>
+            <section class="related-items">
+                <div class="container">
+                    <div class="recent-work-title flex-sb">
+                        <h2>related items</h2>
+                        <div class="doted-line">
+                            <img src="img/icons/dotted-line.png" alt="Recent work">
+                        </div>
+                    </div>
                     <ul class="portfolio-items row flex-sb">
                         <li class="portfolio-item">
                             <a href=""><img src="img/design-character.jpg" alt="design">
